# unefix

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: index.md  installation.md  introduction.md  usage.md
include/: unefix.hpp
include/defs/: efiblockio.hpp  efiboot.hpp  eficonf.hpp  efifs.hpp  efigrph.hpp  efiinp.hpp  efimacr.hpp  efirs.hpp  efitop.hpp  undefix.hpp
include/types/: uefi_stddef.h  uefi_stdint.h  untypes.hpp
include/unstdx/: efiexcept.hpp  efifile.hpp  efigfx.hpp  efimem.hpp  efinew.hpp  efirtti.hpp  efistr.hpp  efistream.hpp  efisys.hpp  efiutils.hpp
include/unstdx/raw/: stdthrow.hpp  trampoline.hpp
lib/: unefix.cpp
lib/unstdx/: efifile.cpp  efigfx.cpp  efimem.cpp  efinew.cpp  efistream.cpp  efisys.cpp
lib/unstdx/raw/: trampoline.cpp
test/: test.cpp
